support running build with JDK 16
Note that we need to add some Java Module exports as Gradle `jvmargs` for Spotless, see issue https://github.com/diffplug/spotless/issues/834.

Since Java Records was only a preview feature with JDK 15 we will now drop testing it for JDK 15 and start testing it from JDK 16 onwards where it was fully released. Note that from JDK 17 on adding the `--enable-preview` flag would lead to the error:

 ```
 error: invalid source release 15 with --enable-preview
   (preview language features are only supported for release 16)
```

Signed-off-by: Tim te Beek <tim.te.beek@jdriven.com>