@@ -55,7 +55,7 @@ archUnitTest {
 
 def jdk9MainDirs = ['src/jdk9main/java']
 def jdk9TestDirs = ['src/jdk9test/java']
-def jdk15TestDirs = ['src/jdk15test/java']
+def jdk16TestDirs = ['src/jdk16test/java']
 sourceSets {
     jdk9main {
         java {
@@ -69,9 +69,9 @@ sourceSets {
         }
         compileClasspath += sourceSets.test.compileClasspath + sourceSets.jdk9main.output.classesDirs
     }
-    jdk15test {
+    jdk16test {
         java {
-            srcDirs = jdk15TestDirs
+            srcDirs = jdk16TestDirs
         }
         compileClasspath += sourceSets.test.compileClasspath + sourceSets.jdk9main.output.classesDirs
     }
@@ -82,8 +82,8 @@ dependencies {
     jdk9testImplementation sourceSets.test.output
     jdk9testImplementation sourceSets.test.compileClasspath
     jdk9testImplementation sourceSets.jdk9main.output
-    jdk15testImplementation sourceSets.test.output
-    jdk15testImplementation sourceSets.test.compileClasspath
+    jdk16testImplementation sourceSets.test.output
+    jdk16testImplementation sourceSets.test.compileClasspath
 
     runtimeOnly sourceSets.jdk9main.output
 }
@@ -101,10 +101,8 @@ compileJdk9testJava.with {
     ext.minimumJavaVersion = JavaVersion.VERSION_1_9
 }
 
-compileJdk15testJava.with {
-    ext.minimumJavaVersion = JavaVersion.VERSION_15
-
-    options.compilerArgs += '--enable-preview'
+compileJdk16testJava.with {
+    ext.minimumJavaVersion = JavaVersion.VERSION_16
 }
 
 task jdk9Test(type: Test) {
@@ -114,16 +112,15 @@ task jdk9Test(type: Test) {
     classpath = sourceSets.jdk9test.runtimeClasspath
 }
 
-task jdk15Test(type: Test) {
-    ext.minimumJavaVersion = JavaVersion.VERSION_15
+task jdk16Test(type: Test) {
+    ext.minimumJavaVersion = JavaVersion.VERSION_16
 
-    testClassesDirs = sourceSets.jdk15test.output.classesDirs
-    classpath = sourceSets.jdk15test.runtimeClasspath
-    jvmArgs += "--enable-preview"
+    testClassesDirs = sourceSets.jdk16test.output.classesDirs
+    classpath = sourceSets.jdk16test.runtimeClasspath
 }
 
 assemble.dependsOn compileJdk9mainJava
 
-test.finalizedBy(jdk9Test, jdk15Test)
+test.finalizedBy(jdk9Test, jdk16Test)
 
-[spotbugsJdk9test, spotbugsJdk15test]*.enabled = false
+[spotbugsJdk9test, spotbugsJdk16test]*.enabled = false
